# src/web/docs/swagger.json
@@ -54,7 +54,7 @@
                 }
             }
         },
-        "/trades/buy/{trade_id}": {
+        "/trades/buy/{ticker_symbol}": {
             "post": {
                 "description": "It creates new trade details with the given ticker symbol",
                 "consumes": [
@@ -80,7 +80,7 @@
                     {
                         "type": "string",
                         "description": "Ticker Symbol",
-                        "name": "trade_id",
+                        "name": "ticker_symbol",
                         "in": "path",
                         "required": true
                     }
